--- a/orden_modificacion.html
+++ b/orden_modificacion.html
@@ -2,18 +2,26 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <style>
-    body { font-family: Arial; padding: 20px; }
-    .header { text-align: center; margin-bottom: 30px; }
-    .title { font-size: 24px; font-weight: bold; }
-    table { width: 100%; border-collapse: collapse; margin: 15px 0; }
-    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-    .signature { margin-top: 50px; }
-    @media print {
-      .no-print { display: none; }
-      body { padding: 0; margin: 0; }
-    }
-  </style>
+ <style>
+ body { font-family: Arial, sans-serif; padding: 20px; background-color: #f4f4f4; color: #333; }
+ .header { text-align: center; margin-bottom: 30px; background-color: #e9e9e9; padding: 15px 0; border-radius: 5px; }
+ .title { font-size: 26px; font-weight: bold; color: #555; }
+ table { width: 100%; border-collapse: collapse; margin: 15px 0; box-shadow: 0 2px 5px rgba(0,0,0,0.1); background-color: white; border-radius: 5px; overflow: hidden; }
+ th, td { border: 1px solid #ddd; padding: 12px; text-align: left; }
+ th { background-color: #f0f0f0; font-weight: bold; }
+ tr:nth-child(even) { background-color: #f9f9f9; }
+ .signature { margin-top: 50px; text-align: center; }
+ .signature p { margin: 5px 0; }
+ .align-center { text-align: center; }
+ h3 { margin-bottom: 10px; color: #555; }
+ .no-print { display: none; }
+ @media print {
+   .no-print { display: none; }
+   body { padding: 0; margin: 0; background-color: white; color: black; }
+   .header { background-color: white; }
+   table { box-shadow: none; }
+ }
+</style>
 </head>
 <body>
   <div class="header">
