--- a/orden_modificacion.html
+++ b/orden_modificacion.html
@@ -1,76 +1,162 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
- <style>
- body { font-family: Arial, sans-serif; padding: 20px; background-color: #f4f4f4; color: #333; }
- .header { text-align: center; margin-bottom: 30px; background-color: #e9e9e9; padding: 15px 0; border-radius: 5px; }
- .title { font-size: 26px; font-weight: bold; color: #555; }
- table { width: 100%; border-collapse: collapse; margin: 15px 0; box-shadow: 0 2px 5px rgba(0,0,0,0.1); background-color: white; border-radius: 5px; overflow: hidden; }
- th, td { border: 1px solid #ddd; padding: 12px; text-align: left; }
- th { background-color: #f0f0f0; font-weight: bold; }
- tr:nth-child(even) { background-color: #f9f9f9; }
- .signature { margin-top: 50px; text-align: center; }
- .signature p { margin: 5px 0; }
- .align-center { text-align: center; }
- h3 { margin-bottom: 10px; color: #555; }
- .no-print { display: none; }
- @media print {
-   .no-print { display: none; }
-   body { padding: 0; margin: 0; background-color: white; color: black; }
-   .header { background-color: white; }
-   table { box-shadow: none; }
- }
-</style>
+    <meta charset="UTF-8">
+    <title>Orden de Modificación</title>
+    <style>
+        body { 
+            font-family: Arial, sans-serif; 
+            padding: 20px; 
+            background-color: #f4f4f4; 
+            color: #333; 
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .header { 
+            text-align: center; 
+            margin-bottom: 30px; 
+            background-color: #e9e9e9; 
+            padding: 15px 0; 
+            border-radius: 5px; 
+        }
+        .title { 
+            font-size: 26px; 
+            font-weight: bold; 
+            color: #555; 
+        }
+        table { 
+            width: 100%; 
+            border-collapse: collapse; 
+            margin: 15px 0; 
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
+            background-color: white; 
+            border-radius: 5px; 
+            overflow: hidden; 
+        }
+        th, td { 
+            border: 1px solid #ddd; 
+            padding: 12px; 
+            text-align: left; 
+        }
+        th { 
+            background-color: #f0f0f0; 
+            font-weight: bold; 
+        }
+        tr:nth-child(even) { 
+            background-color: #f9f9f9; 
+        }
+        .details-section h3 {
+            margin-top: 25px;
+            margin-bottom: 15px;
+            color: #555;
+            border-bottom: 2px solid #ccc;
+            padding-bottom: 5px;
+        }
+        .details-section p {
+            margin-bottom: 10px;
+        }
+        .signature-section { 
+            margin-top: 50px; 
+            text-align: center; 
+        }
+        .signature-section p { 
+            margin: 5px 0; 
+        }
+        .signature-line {
+            display: inline-block;
+            border-bottom: 1px solid #333;
+            width: 250px;
+            margin-bottom: 5px;
+        }
+        .signature-image {
+            max-width: 250px;
+            height: auto;
+            display: block;
+            margin: 10px auto 0;
+            border: 1px solid #ddd;
+            padding: 5px;
+        }
+        .no-print { 
+            display: none; 
+        }
+        @media print {
+            .no-print { display: none; }
+            body { padding: 0; margin: 0; background-color: white; color: black; }
+            .container { box-shadow: none; padding: 0; margin: 0; }
+            .header { background-color: white; }
+            table { box-shadow: none; }
+        }
+    </style>
 </head>
 <body>
-  <div class="header">
-    <div class="title">ORDEN DE MODIFICACIÓN</div>
-    <div>Folio: <span id="folio"></span></div>
-  </div>
+    <div class="container">
+        <div class="header">
+            <div class="title">ORDEN DE MODIFICACIÓN</div>
+            <div>Folio: <span id="folio"></span></div>
+        </div>
 
-  <table>
-    <tr><th>ID</th><td><span id="id"></span></td></tr>
-    <tr><th>IDFAB</th><td><span id="idfab"></span></td></tr>
-    <tr><th>Fecha</th><td><span id="fecha"></span></td></tr>
-  </table>
+        <table>
+            <tr><th>ID</th><td><span id="id"></span></td></tr>
+            <tr><th>IDFAB</th><td><span id="idfab"></span></td></tr>
+            <tr><th>Fecha</th><td><span id="fecha"></span></td></tr>
+        </table>
 
-  <h3>Detalles de modificación:</h3>
-  <p><strong>Modificación:</strong> <span id="modificacion"></span></p>
-  <p><strong>Motivo:</strong> <span id="motivo"></span></p>
-  <p><strong>Referencia:</strong> <span id="referencia"></span></p>
+        <div class="details-section">
+            <h3>Detalles de modificación:</h3>
+            <p><strong>Modificación:</strong> <span id="modificacion"></span></p>
+            <p><strong>Motivo:</strong> <span id="motivo"></span></p>
+            <p><strong>Referencia:</strong> <br><img id="referencia_imagen" src="" alt="Referencia" class="signature-image"></p>
+        </div>
 
-  <table>
-    <tr><th>Solicitado por</th><td><span id="solicitado_por"></span></td></tr>
-    <tr><th>Status</th><td><span id="status"></span></td></tr>
-    <tr><th>Aprobado</th><td><span id="aprobado"></span></td></tr>
-  </table>
+        <table>
+            <tr><th>Solicitado por</th><td><span id="solicitado_por"></span></td></tr>
+            <tr><th>Status</th><td><span id="status"></span></td></tr>
+            <tr><th>Aprobado</th><td><span id="aprobado"></span></td></tr>
+        </table>
 
-  <div class="signature">
-    <p>Firma de aprobación: _________________________</p>
-    <p><span id="firma_aprobacion"></span></p>
-  </div>
+        <div class="signature-section">
+            <p>Firma de aprobación: <div class="signature-line"></div></p>
+            <p><img id="firma_aprobacion_imagen" src="" alt="Firma de Aprobación" class="signature-image"></p>
+        </div>
 
-  <button class="no-print" onclick="window.print()">Imprimir Documento</button>
+        <button class="no-print" onclick="window.print()">Imprimir Documento</button>
+    </div>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      // Obtiene los parámetros de la URL
-      const urlParams = new URLSearchParams(window.location.search);
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const urlParams = new URLSearchParams(window.location.search);
 
-      // Asigna los valores a los elementos de la página
-      document.getElementById('folio').innerText = urlParams.get('folio') || '';
-      document.getElementById('id').innerText = urlParams.get('id') || '';
-      document.getElementById('idfab').innerText = urlParams.get('idfab') || '';
-      document.getElementById('fecha').innerText = urlParams.get('fecha') || '';
-      document.getElementById('modificacion').innerText = urlParams.get('modificacion') || '';
-      document.getElementById('motivo').innerText = urlParams.get('motivo') || '';
-      document.getElementById('referencia').innerText = urlParams.get('referencia') || '';
-      document.getElementById('solicitado_por').innerText = urlParams.get('solicitado_por') || '';
-      document.getElementById('status').innerText = urlParams.get('status') || '';
-      document.getElementById('aprobado').innerText = urlParams.get('aprobado') || '';
-      document.getElementById('firma_aprobacion').innerText = urlParams.get('firma_aprobacion') || '';
-    });
-  </script>
+            document.getElementById('folio').innerText = urlParams.get('folio') || '';
+            document.getElementById('id').innerText = urlParams.get('id') || '';
+            document.getElementById('idfab').innerText = urlParams.get('idfab') || '';
+            document.getElementById('fecha').innerText = urlParams.get('fecha') || '';
+            document.getElementById('modificacion').innerText = urlParams.get('modificacion') || '';
+            document.getElementById('motivo').innerText = urlParams.get('motivo') || '';
+            document.getElementById('solicitado_por').innerText = urlParams.get('solicitado_por') || '';
+            document.getElementById('status').innerText = urlParams.get('status') || '';
+            document.getElementById('aprobado').innerText = urlParams.get('aprobado') || '';
+            
+            // Lógica para imágenes
+            const referenciaUrl = urlParams.get('referencia') || '';
+            if (referenciaUrl) {
+                document.getElementById('referencia_imagen').src = referenciaUrl;
+            } else {
+                document.getElementById('referencia_imagen').style.display = 'none';
+            }
+
+            const firmaAprobacionUrl = urlParams.get('firma_aprobacion') || '';
+            if (firmaAprobacionUrl) {
+                document.getElementById('firma_aprobacion_imagen').src = firmaAprobacionUrl;
+            } else {
+                document.getElementById('firma_aprobacion_imagen').style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
