--- a/orden_modificacion.html
+++ b/orden_modificacion.html
@@ -114,7 +114,7 @@
 
  <table>
  <tr><th>Folio del Documento</th><td><span id="folio"></span></td></tr>
- <tr><th>IDFAB</th><td><span id="idfab"></span></td></tr>
+ <tr><th>ID de Fabricación</th><td><span id="idfab"></span></td></tr>
  <tr><th>Fecha</th><td><span id="fecha"></span></td></tr>
  </table>
 
@@ -128,9 +128,9 @@
 
 
  <table>
- <tr><th>Solicitado por</th><td><span id="solicitado_por"></span></td></tr>
- <tr><th>Status</th><td><span id="status"></span></td></tr>
- <tr><th>Aprobado</th><td><span id="aprobado"></span></td></tr>
+ <tr><th>Solicitado por:</th><td><span id="solicitado_por"></span></td></tr>
+ <tr><th>Status de la solicitud:</th><td><span id="status"></span></td></tr>
+ <tr><th>Aprobado por:</th><td><span id="aprobado"></span></td></tr>
  </table>
 
 
