--- a/orden_modificacion.html
+++ b/orden_modificacion.html
@@ -1,180 +1,174 @@
 <!DOCTYPE html>
+
 <html>
 <head>
- <meta charset="UTF-8">
- <title>Orden de Modificación</title>
- <style>
- body {
- font-family: Arial, sans-serif;
- padding: 20px;
- background-color: #f4f4f4;
- color: #333;
- }
- .container {
- max-width: 800px;
- margin: auto;
- background: white;
- padding: 30px;
- border-radius: 8px;
- box-shadow: 0 4px 8px rgba(0,0,0,0.1);
- }
- .logo-container {
- text-align: center;
- margin-bottom: 20px;
- }
- .logo {
- max-width: 150px;
- height: auto;
- }
- .header {
- text-align: center;
- margin-bottom: 30px;
- background-color: #e9e9e9;
- padding: 15px 0;
- border-radius: 5px;
- }
- .title {
- font-size: 26px;
- font-weight: bold;
- color: #555;
- }
- table {
- width: 100%;
- border-collapse: collapse;
- margin: 15px 0;
- box-shadow: 0 2px 5px rgba(0,0,0,0.1);
- background-color: white;
- border-radius: 5px;
- overflow: hidden;
- }
- th, td {
- border: 1px solid #ddd;
- padding: 12px;
- text-align: left;
- }
- th {
- background-color: #f0f0f0;
- font-weight: bold;
- }
- tr:nth-child(even) {
- background-color: #f9f9f9;
- }
- .details-section h3 {
- margin-top: 25px;
- margin-bottom: 15px;
- color: #555;
- border-bottom: 2px solid #ccc;
- padding-bottom: 5px;
- }
- .details-section p {
- margin-bottom: 10px;
- }
- .signature-section {
- margin-top: 50px;
- text-align: center;
- }
- .signature-section p {
- margin: 5px 0;
- }
- .signature-line {
- display: inline-block;
- border-bottom: 1px solid #333;
- width: 250px;
- margin-bottom: 5px;
- }
- .signature-image {
- max-width: 250px;
- height: auto;
- display: block;
- margin: 10px auto 0;
- border: 1px solid #ddd;
- padding: 5px;
- }
- .no-print {
- display: none;
- }
- @media print {
- .no-print { display: none; }
- body { padding: 0; margin: 0; background-color: white; color: black; }
- .container { box-shadow: none; padding: 0; margin: 0; }
- .header { background-color: white; }
- table { box-shadow: none; }
- }
- </style>
+<meta charset="UTF-8">
+<title>Orden de Modificación</title>
+<style>
+body {
+font-family: Arial, sans-serif;
+padding: 20px;
+background-color: #f4f4f4;
+color: #333;
+}
+.container {
+max-width: 800px;
+margin: auto;
+background: white;
+padding: 30px;
+border-radius: 8px;
+box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+.header-container {
+display: flex;
+justify-content: space-between; / Coloca el contenido en los extremos /
+align-items: center; / Centra verticalmente los elementos /
+margin-bottom: 20px; / Espacio debajo del encabezado /
+}
+.logo {
+max-width: 150px;
+height: auto;
+}
+.header {
+text-align: left; / Alinea el texto del título a la izquierda /
+}
+.title {
+font-size: 26px;
+font-weight: bold;
+color: #555;
+margin: 0; /* Elimina márgenes innecesarios del título /
+}
+table {
+width: 100%;
+border-collapse: collapse;
+margin: 15px 0;
+box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+background-color: white;
+border-radius: 5px;
+overflow: hidden;
+}
+th, td {
+border: 1px solid #ddd;
+padding: 12px;
+text-align: left;
+}
+th {
+background-color: #f0f0f0;
+font-weight: bold;
+}
+tr:nth-child(even) {
+background-color: #f9f9f9;
+}
+.details-section h3 {
+margin-top: 25px;
+margin-bottom: 15px;
+color: #555;
+border-bottom: 2px solid #ccc;
+padding-bottom: 5px;
+}
+.details-section p {
+margin-bottom: 10px;
+}
+.signature-section {
+margin-top: 50px;
+text-align: center;
+}
+.signature-section p {
+margin: 5px 0;
+}
+.signature-line {
+display: inline-block;
+border-bottom: 1px solid #333;
+width: 250px;
+margin-bottom: 5px;
+}
+.signature-image {
+max-width: 250px;
+height: auto;
+display: block;
+margin: 10px auto 0;
+border: 1px solid #ddd;
+padding: 5px;
+}
+.no-print {
+display: none;
+}
+@media print {
+.no-print { display: none; }
+body { padding: 0; margin: 0; background-color: white; color: black; }
+.container { box-shadow: none; padding: 0; margin: 0; }
+.header-container { display: flex; } / Asegura que flexbox se active en la impresión también */
+.header { background-color: white; }
+table { box-shadow: none; }
+}
+</style>
 </head>
 <body>
- <div class="container">
- <div class="logo-container">
- <img src="https://www.appsheet.com:443/fsimage.png?appid=15ab7ef8-4923-40f5-80ca-3607e9850805&datasource=google&filename=DocId%3D1ON0AOw6aLouPB4hLD4HSPHQrMyYHFX5x&signature=47171ea295d0c06dc250337a646296a67b31c22191c59f9869bf63a365b8ae49&tableprovider=google&userid=1254688" alt="Logo" class="logo">
- </div>
- <div class="header">
- <div class="title">ORDEN DE MODIFICACIÓN</div>
- </div>
+<div class="container">
+<div class="header-container">
+<img src="http://googleusercontent.com/file_content/2" alt="Logo" class="logo">
+<div class="header">
+<h1 class="title">ORDEN DE MODIFICACIÓN</h1>
+</div>
+</div>
 
+<table>
+<tr><th>Folio del Documento</th><td><span id="folio"></span></td></tr>
+<tr><th>ID de Fabricación</th><td><span id="idfab"></span></td></tr>
+<tr><th>Fecha</th><td><span id="fecha"></span></td></tr>
+</table>
 
- <table>
- <tr><th>Folio del Documento</th><td><span id="folio"></span></td></tr>
- <tr><th>ID de Fabricación</th><td><span id="idfab"></span></td></tr>
- <tr><th>Fecha</th><td><span id="fecha"></span></td></tr>
- </table>
+<div class="details-section">
+<h3>Detalles de modificación:</h3>
+<p><strong>Modificación:</strong> <span id="modificacion"></span></p>
+<p><strong>Motivo:</strong> <span id="motivo"></span></p>
+<p><strong>Referencia:</strong> <br><img id="referencia_imagen" src="" alt="Referencia" class="signature-image"></p>
+</div>
 
+<table>
+<tr><th>Solicitado por:</th><td><span id="solicitado_por"></span></td></tr>
+<tr><th>Status de la solicitud:</th><td><span id="status"></span></td></tr>
+<tr><th>Aprobado por:</th><td><span id="aprobado"></span></td></tr>
+</table>
 
- <div class="details-section">
- <h3>Detalles de modificación:</h3>
- <p><strong>Modificación:</strong> <span id="modificacion"></span></p>
- <p><strong>Motivo:</strong> <span id="motivo"></span></p>
- <p><strong>Referencia:</strong> <br><img id="referencia_imagen" src="" alt="Referencia" class="signature-image"></p>
- </div>
+<div class="signature-section">
+<p>Firma de aprobación: <div class="signature-line"></div></p>
+<p><img id="firma_aprobacion_imagen" src="" alt="Firma de Aprobación" class="signature-image"></p>
+</div>
 
+<button class="no-print" onclick="window.print()">Imprimir Documento</button>
 
- <table>
- <tr><th>Solicitado por:</th><td><span id="solicitado_por"></span></td></tr>
- <tr><th>Status de la solicitud:</th><td><span id="status"></span></td></tr>
- <tr><th>Aprobado por:</th><td><span id="aprobado"></span></td></tr>
- </table>
+</div>
 
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+const urlParams = new URLSearchParams(window.location.search);
 
- <div class="signature-section">
- <p>Firma de aprobación: <div class="signature-line"></div></p>
- <p><img id="firma_aprobacion_imagen" src="" alt="Firma de Aprobación" class="signature-image"></p>
- </div>
+document.getElementById('folio').innerText = urlParams.get('folio') || '';
+document.getElementById('idfab').innerText = urlParams.get('idfab') || '';
+document.getElementById('fecha').innerText = urlParams.get('fecha') || '';
+document.getElementById('modificacion').innerText = urlParams.get('modificacion') || '';
+document.getElementById('motivo').innerText = urlParams.get('motivo') || '';
+document.getElementById('solicitado_por').innerText = urlParams.get('solicitado_por') || '';
+document.getElementById('status').innerText = urlParams.get('status') || '';
+document.getElementById('aprobado').innerText = urlParams.get('aprobado') || '';
 
+// Lógica para imágenes
+const referenciaUrl = urlParams.get('referencia') || '';
+if (referenciaUrl) {
+document.getElementById('referencia_imagen').src = referenciaUrl;
+} else {
+document.getElementById('referencia_imagen').style.display = 'none';
+}
 
- <button class="no-print" onclick="window.print()">Imprimir Documento</button>
- </div>
+const firmaAprobacionUrl = urlParams.get('firma_aprobacion') || '';
+if (firmaAprobacionUrl) {
+document.getElementById('firma_aprobacion_imagen').src = firmaAprobacionUrl;
+} else {
+document.getElementById('firma_aprobacion_imagen').style.display = 'none';
+}
+});
+</script>
 
-
- <script>
- document.addEventListener('DOMContentLoaded', () => {
- const urlParams = new URLSearchParams(window.location.search);
-
-
- document.getElementById('folio').innerText = urlParams.get('folio') || '';
- document.getElementById('idfab').innerText = urlParams.get('idfab') || '';
- document.getElementById('fecha').innerText = urlParams.get('fecha') || '';
- document.getElementById('modificacion').innerText = urlParams.get('modificacion') || '';
- document.getElementById('motivo').innerText = urlParams.get('motivo') || '';
- document.getElementById('solicitado_por').innerText = urlParams.get('solicitado_por') || '';
- document.getElementById('status').innerText = urlParams.get('status') || '';
- document.getElementById('aprobado').innerText = urlParams.get('aprobado') || '';
-
-
- // Lógica para imágenes
- const referenciaUrl = urlParams.get('referencia') || '';
- if (referenciaUrl) {
- document.getElementById('referencia_imagen').src = referenciaUrl;
- } else {
- document.getElementById('referencia_imagen').style.display = 'none';
- }
-
-
- const firmaAprobacionUrl = urlParams.get('firma_aprobacion') || '';
- if (firmaAprobacionUrl) {
- document.getElementById('firma_aprobacion_imagen').src = firmaAprobacionUrl;
- } else {
- document.getElementById('firma_aprobacion_imagen').style.display = 'none';
- }
- });
- </script>
 </body>
 </html>
