--- a/orden_modificacion.html
+++ b/orden_modificacion.html
@@ -7,7 +7,7 @@
 <style>
 body {
 font-family: 'Arial', sans-serif;
-padding: 30px;
+padding: 20px;
 background-color: #f4f4f4;
 color: #333;
 line-height: 1.6;
@@ -35,13 +35,13 @@ margin-right: 20px; / Espacio entre el logo y el título */
 text-align: left;
 }
 .title {
-font-size: 28px;
+font-size: 20px;
 font-weight: bold;
 color: #37474F;
 margin-bottom: 5px;
 }
 .subtitle {
-font-size: 16px;
+font-size: 12px;
 color: #78909C;
 }
 table {
@@ -67,7 +67,7 @@ tr:last-child td {
 border-bottom: none;
 }
 .section-title {
-font-size: 20px;
+font-size: 15px;
 font-weight: bold;
 color: #37474F;
 margin-top: 30px;
@@ -116,7 +116,6 @@ body { padding: 20px; background-color: white; color: black; }
 <img src="TU_URL_DEL_LOGO_AQUI" alt="Logo" class="logo">
 <div class="title-container">
 <h1 class="title">ORDEN DE MODIFICACIÓN</h1>
-<h6 class="subtitle">Documento de Trabajo</h6>
 </div>
 </div>
 
@@ -140,7 +139,7 @@ body { padding: 20px; background-color: white; color: black; }
 </table>
 
 <div class="signature-section">
-    <p>Firma de aprobación: <div class="signature-line"></div></p>
+    <p>Firma de aprobación:</p>
     <p><img id="firma_aprobacion_imagen" src="" alt="Firma de Aprobación" class="signature-image"></p>
 </div>
 
